# my-voice-tts

./: .gitignore  README.md  pyproject.toml
src/my_voice_tts/: __init__.py  blog_reader.py  cli.py  clone.py  recorder.py
